2012-03-06  Helmut Eller  <heller@common-lisp.net>

	* swank-kawa.scm (module-method>meth-ref):  Slightly better
	heuristic for vararg functions.

2012-03-06  Helmut Eller  <heller@common-lisp.net>

	Add missing provide.

	* swank-repl.lisp
	* swank-util.lisp
	* swank-mrepl.lisp
	* swank-snapshot.lisp

2012-03-06  Stas Boukarev  <stassats@gmail.com>

	* slime-package-fu.el (slime-export-save-file): New variable, when
	set to T saves package.lisp after each modification. Defaults to NIL.

2012-01-06  Helmut Eller  <heller@common-lisp.net>

	* swank-mrepl.lisp (send-prompt): Fix use of OR.
	Reported by Mark H. David.

2011-12-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (common-lisp-looking-at-keyword): New function. Looks
	past #+foo expressions.
	(common-lisp-backward-keyword-argument): New function. Semi-aware
	of #+foo expressions.
	(common-lisp-indent-function-1):
	1. Use `common-lisp-indent-parse-state-start'.
	2. Move #+/- cleavernes outside the cond: it is always a default, and shouldn't
	trump other indentation logic. Also make it use the column of the first feature
	expression, not the last.
	3. Make keyword alignment somewhat feature-expression aware.
	4. Make heuristics not force remaining forms to be indented at the same line.
	(common-lisp-indent-test): Leave one leading whitespace on comment lines
	when messing up indentation.

	* slime-cl-indent-test.txt (tests 77-83): Tests for feature-expression
	and keyword alignment interaction.

2011-12-24  Stas Boukarev  <stassats@gmail.com>

	* slime-tramp.el (slime-find-filename-translators): Don't signal
	an error if there's no translators for a hostname, just use 'identity.

2011-12-23  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-change-repl-to-default-connection): New
	function.
	Changes the current REPL to the REPL of the default connection. If
	the current buffer is not a REPL, don't do anything.
	Put it into `slime-cycle-connections-hook', so that when