@@ -1,3 +1,9 @@
+2012-03-08  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-arglists.lisp (print-decoded-arglist): When the source of
+	the arglist is a local definition from FLET, some parts may be
+	represented as ARGLIST-DUMMY, handle them.
+
 2012-03-06  Helmut Eller  <heller@common-lisp.net>
 
 	* swank-kawa.scm (module-method>meth-ref):  Slightly better
